fixed overflow

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 body {
   font-family: "Poppins", sans-serif;
   color: var(--primary-text-color);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 h1 {
   font-size: 3rem;
